--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
 </head>
 
 <body>
-<h1>柴柴科技_首頁</h1>
-<p>歡迎來到柴柴的網站<br>
+<h1>柴柴3D列印_首頁</h1>
+<p>
+	歡迎來到柴柴的網站，我是柴柴。<br>
+  在這裡有一些關於3D列印技術的簡介和教學<br>
+  希望你能看到一些有用的資訊，也希望大家不要掉進調平地獄(壞笑)
 </p>
-<p>&nbsp;</p>
+<p>
+	理論篇_簡介，耗材，機型<br>
+	起始篇_安裝，存放，檢修<br>
+	實戰篇_圖檔，切片，列印<br>
+	</p>
+
 </body>
 </html>
