--- a/3DPA3.html
+++ b/3DPA3.html
@@ -9,6 +9,23 @@
 <h1>機型</h1>
 <p><br>
 </p>
-<p>&nbsp;</p>
+<p>目前柴柴用的列印機是這台anycubic i3 mega-s</p>
+<img src="https://cdn.shopify.com/s/files/1/0245/5519/2380/products/MegaS_2_1800x1800.jpg?v=1588034048"/>
+	<p>● 列印技術: FDM (Fused Deposition Modeling)
+● 最大列印體積: 210 x 210 x 205 mm<br>
+● 定位準度: X/Y 0.0125mm Z 0.002mm<br>
+● 可列印耗材: TPU,PLA, ABS, HIPS, Wood<br>
+● 全金屬機身<br>
+● 高解析度到50微米<br>
+● 經隔熱床方便黏合和取件<br>
+● 斷電續印功能<br>
+● 為了軟性材料開發的泰坦擠出機<br>
+● Suspended Spool(Filament) Holder<br>
+● Input Formats: .STL, .OBJ, .DAE, .AMF<br>
+● 工作環境溫度: 8ºC - 40ºC<br>
+● 可使用 SD Card, USB Port <br>
+● 全機重量: 16.5kg<br>
+		
+	</p>
 </body>
 </html>
