--- a/3DPB2.html
+++ b/3DPB2.html
@@ -6,8 +6,9 @@
 </head>
 
 <body>
-<h1>柴柴科技_首頁</h1>
-<p>歡迎來到柴柴的網站<br>
+<h1>檢修</h1>
+<p>3d列印機的存放需要保證接近完全乾燥已達到保護機器的目的<br>
+	同時列印耗材需要乾燥來避免變質或發脆，必要時甚至需自行設計防潮裝置
 </p>
 <p>&nbsp;</p>
 </body>
