--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>柴柴科技</title>
+<link href="index.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -13,9 +14,9 @@
   希望你能看到一些有用的資訊，也希望大家不要掉進調平地獄(壞笑)
 </p>
 <p>
-	理論篇_簡介，耗材，機型<br>
-	起始篇_安裝，存放，檢修<br>
-	實戰篇_圖檔，切片，列印<br>
+	理論篇_<a href="https://shibawalker.github.io/3DPA1">簡介</a>，<a href="https://shibawalker.github.io/3DPA2">耗材</a>，<a href="https://shibawalker.github.io/3DPA3">機型</a><br>
+	起始篇_<a href="https://shibawalker.github.io/3DPB1">安裝</a>，<a href="https://shibawalker.github.io/3DPB2">檢修</a>，<a href="https://shibawalker.github.io/3DPB3">繪圖</a><br>
+	實戰篇_<a href="https://shibawalker.github.io/3DPC1">圖檔</a>，<a href="https://shibawalker.github.io/3DPC2">切片</a>，<a href="https://shibawalker.github.io/3DPC3">列印</a><br>
 	</p>
 
 </body>
