--- a/3DPB1.html
+++ b/3DPB1.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>柴柴科技</title>
+<title>起始篇_安裝</title>
 </head>
 
 <body>
-<h1>柴柴科技_首頁</h1>
-<p>歡迎來到柴柴的網站<br>
+<h1>起始篇_安裝</h1>
+<p><br>
 </p>
 <p>&nbsp;</p>
 </body>
