--- a/3DPC2.html
+++ b/3DPC2.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>柴柴科技</title>
+<title>實戰篇_切片</title>
 </head>
 
 <body>
-<h1>柴柴科技_首頁</h1>
-<p>歡迎來到柴柴的網站<br>
+<h1>實戰篇_切片</h1>
+<p>費盡千辛萬苦之後，終於把STL圖檔做好了<br>
 </p>
 <p>&nbsp;</p>
 </body>
